--- a/styles.css
+++ b/styles.css
@@ -9,13 +9,19 @@
     url("https://db.onlinewebfonts.com/t/eb270b13b84d5a43462737e3fb0a268d.svg#Suisse Intl Regular")format("svg");
     /* Add more font formats (e.g., woff, woff2) for cross-browser compatibility */
 }
+
+* { 
+    -moz-box-sizing: border-box; 
+    -webkit-box-sizing: border-box; 
+     box-sizing: border-box; 
+}
 /* Style the new paragraph */
 html{
     width: auto;
     -webkit-box-sizing: content-box;
     -moz-box-sizing: content-box;
     box-sizing: content-box;
-    -webkit-text-size-adjust: 100%;
+    /*-webkit-text-size-adjust: 100%;*/
     -moz-text-size-adjust: 100%;
     -ms-text-size-adjust: 100%;
 }
@@ -29,6 +35,15 @@ html{
     pointer-events: none; /* Ensure the cursor doesn't interfere with elements */
     z-index: 9999; /* Make sure the cursor is on top of everything */
   }
+
+  h2 {
+    display: block;
+    margin-block-start: 0;
+    margin-block-end: 0;
+    margin-inline-start: 0px;
+    margin-inline-end: 0px;
+    padding-top: 5px;
+}
 
 
 .intro p{
@@ -107,7 +122,11 @@ a:hover { text-decoration: none;
 
 p { 
     font-size: 140%;
-
+    display: block;
+    margin-block-start: 0;
+    margin-block-end: 0;
+    margin-inline-start: 0px;
+    margin-inline-end: 0px;
 }
 
 /* Style for the project container */
@@ -135,6 +154,7 @@ p {
     width: 83.100%;
     overflow-x: auto;
     overflow-y: hidden;
+    padding: 5px;
 
 
 }
@@ -142,7 +162,7 @@ p {
 .project-images img {
     max-width: 100%;
     max-height: 100%; /* Fit the images within the available height */
-    margin-right: 10px;
+    margin-right: 5px;
 }
 
 
@@ -159,45 +179,40 @@ p {
     float: left;
     display: table;
     width: 100%; /* Adjust the width as needed */
-    padding: 5px;
 }
 
 /* Style for the project details (left column) */
-.project-details {
+.col-1-details {
     float: left;
-    padding: 0;
+    padding: 5px;
     width: 16.66%;
-
 }
 
 /* Style for the main paragraph (right column) */
 .project-description {
-    width: 83.33%;
     float: right;
-}
+    width: 83.33%;
+    }
+    
+
 
 /* Style for the project description */
-.column-wrapper {
-    column-count: 2;
-    column-gap: 10px;
-    column-width: auto;
-    column-fill: #F2F2F2;
+[class*="col-"]{
+    float: left;
+    padding: 5px;
 }
-
-.column-wrapper p {
-    margin: 0;
-    font-size: 140%;
+.col-2-description{
+    width: 50%;
 }
-
-
-
-
+.col-3-description{
+    width: 50%;
+}
 
 /* Style for the dropdown menu */
 .dropdown {
     position: absolute;
     top: 2%; /* Adjust the top position to your preference */
-    right: 2%; /* Adjust the right position to your preference */
+    right: 0%; /* Adjust the right position to your preference */
     width: 15%;
     font-size: 150%;
     text-align: right;
@@ -274,12 +289,23 @@ p {
     animation-play-state: running;
 }*/
 @media only screen and (max-width: 768px){
-    .column-wrapper {
-        column-count: 1; /* Set the number of columns as needed */
+    .col-2-description{
+        width: 100%;
+        padding-bottom: 0;
     }
-    p { 
-        font-size: 100%;
-    
+    .col-3-description{
+        width: 100%;
+        padding-top: 0;
+    }
+   
+
+h2 {
+    display: block;
+    margin-block-start: 0;
+    margin-block-end: 0;
+    margin-inline-start: 0px;
+    margin-inline-end: 0px;
+    padding-top: 5px;
 }
 .project {
     flex-direction: column; /* Stack elements on smaller screens */
@@ -288,18 +314,17 @@ p {
     height: 30vh;
     width: 100%;
 }
-.project-details {
+.col-1-details {
     float: none; /* Remove the float to stack elements */
     width: 100%; /* Occupy full width */
 }
-
 .project-description {
     width: 100%; /* Occupy full width */
     float: none; /* Remove the float to stack elements */
 }
 .project-text {
     font-size: 12pt;
-    line-height: 14pt;
+    line-height: 19pt;
 }
 .dropdown {
     right: 0; /* Set the right position to 0 to avoid overflowing on mobile */
@@ -314,12 +339,25 @@ p {
 @media only screen and (max-width: 400px) {
     /* Your responsive CSS styles for screens up to 400px wide */
 
-    .column-wrapper {
-        column-count: 1; /* Set the number of columns as needed */
+    .col-2-description{
+        width: 100%;
+        padding-bottom: 0;
+    }
+    .col-3-description{
+        width: 100%;
+        padding-top: 0;
     }
     p { 
         font-size: 100%;
     
+}
+h2 {
+    display: block;
+    margin-block-start: 0;
+    margin-block-end: 0;
+    margin-inline-start: 0px;
+    margin-inline-end: 0px;
+    padding-top: 5px;
 }
 .project {
     flex-direction: column; /* Stack elements on smaller screens */
@@ -327,8 +365,10 @@ p {
 .project-images{
     height: 30vh;
     width: 100%;
+    padding: 0px;
+    padding-top: 5px;
 }
-.project-details {
+.col-1-details {
     float: none; /* Remove the float to stack elements */
     width: 100%; /* Occupy full width */
 }
@@ -349,7 +389,7 @@ p {
 #animated-name{
     font-size: 40pt;
 }
-}
+
 body {
     cursor: none;
   }
@@ -357,13 +397,4 @@ body {
     cursor: none;
   }
 
-
-
-/* Style to switch to a negative theme on image hover */
-
-
-
-/* Add styles for the "Photography" page in photography.html */
-
-
-/* Add more styling to match the Swiss design style as needed */
+}
